<resources>
    <string name="app_name">The Liers</string>
    <string name="shake_start">Shake to start game</string>
    <string-array name="numberOfDice">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="whatDice">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string name="history_analysis">\nPlayer: %1$s \n\n\nMatches: %2$d \n\n\n\nWinning Ratio: %3$d\%%</string>
    <string name="step_title">Step %1$s : %2$s</string>
    <string name="step_content">%1$s. \n %2$s</string>
    <string name="round_result_msg">You %1$s last round. Shake to go to next round.</string>
    <string name="history_empty">History is empty.</string>
    <string name="enemy_5dice">Enemy has 5 dice</string>
    <string name="you_first">You go first</string>
    <string name="you_second">You go second</string>
    <string name="quit">Quit</string>
    <string name="call">Call</string>
    <string name="bid">Bid</string>
    <string name="cancel">Cancel</string>
    <string name="dice">Dice</string>
    <string name="number_of_dice">Number of Dice</string>
    <string name="kind_of_dice">Kind of Dice</string>
    <string name="opponent_turn">Opponent Turn</string>
    <string name="go_back">Go Back</string>
    <string name="reset">Reset</string>
    <string name="new_game">New Game</string>
    <string name="history">History</string>
    <string name="start">Start</string>
    <string name="about_us">About Us</string>
    <string name="you_win">You Win</string>
    <string name="you_lose">You Lose</string>
    <string name="name">Name</string>
    <string name="host">Host</string>
    <string name="search">Search</string>
    <string name="your_turn">Your Turn</string>
    <string name="rules">Rules</string>
    <string name="go_left">Back</string>
    <string name="go_right">Next</string>
    <string name="how_to_play">How To Play ?</string>
    <string name="rule_img">Rule Images</string>
    <string name="title">LIARS GAME</string>
    <string name="about">a game by liars team</string>
    <string name="choose_activity_guide">Host and Wait for other players to connect OR Search and look for other players.</string>
    <string name="SearchHelp">Find Your Opponent</string>
    <string name="start_host">Start Host</string>
</resources>
