<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="64dp"
    android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn_newGame"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/colorRed"
                android:text="@string/new_game"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/btn_history"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/colorPrimary"
                android:text="@string/history"
                android:textSize="30sp"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">
            <Button
                android:id="@+id/btn_rules"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/colorYellow"
                android:text="@string/rules"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/btn_reset"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/colorAccent"
                android:text="@string/reset"
                android:textSize="30sp"/>
    </LinearLayout>
</LinearLayout>
