<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayActivity"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="7"
        android:orientation="horizontal"
        android:baselineAligned="false"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:orientation="vertical"
            android:background="@color/colorPrimary"
            tools:ignore="NestedWeights">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="horizontal"
                android:gravity="center">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/dice_no6"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/dice" />
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/dice_no7"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/dice" />
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/dice_no8"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/dice" />
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/dice_no9"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/dice" />
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/dice_no10"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/dice" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_result"
                android:layout_width="match_parent"
                android:layout_height="7dp"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:gravity="center"
                android:text="@string/you_win"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txt_bid_info"
                android:layout_width="match_parent"
                android:layout_height="7dp"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:gravity="center"
                android:text="@string/you_win"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="horizontal"
                android:gravity="center">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/dice_no1"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/dice" />
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/dice_no2"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/dice" />
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/dice_no3"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/dice" />
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/dice_no4"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/dice" />
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/dice_no5"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/dice" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/colorAccent">
            <Button
                android:id="@+id/btn_quit"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@color/colorRed"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:text="@string/quit"/>
            <Button
                android:id="@+id/btn_call"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:background="@color/colorYellow"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:text="@string/call"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="2">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    tools:ignore="NestedWeights">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/number_of_dice"
                        android:textSize="20sp"/>
                    <Spinner
                        android:id="@+id/totalSpinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/kind_of_dice"
                        android:textSize="20sp"/>
                    <Spinner
                        android:id="@+id/typeSpinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_bid"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@color/colorPrimaryDark"
                android:text="@string/bid"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>